css/main.css
html {
  height: 100%;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body, button, h1, h2, h3, h4, h5 {
  font-family: 'Roboto', sans-serif;
}

#header {
  background-color: #515D65;
  color: white;
  padding: 10px;
  height: 82px;

  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
}

#page {
  width: 100%;
  height: 100%;
}

#sidebar {
  padding: 10px;
  width: 220px;

  position: absolute;
  left: 0;
  top: 102px;
  right: 0;
  bottom: 0;
}

#googleMap {
  position: absolute;
  left: 240px;
  top: 102px;
  right: 0;
  bottom: 0;
}

#main {
  max-width: 100%;
  width: 800px;
  margin-left: auto;
  margin-right: auto;
}

.spacer {
  margin-bottom: 16px;
}

#loading {
  background: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;

  color: white;
  font-size: 24px;

  padding-top: 200px;
  text-align: center;
}

#bottom-control {
  position: absolute;
  bottom: 50px;
  left: 300px;

  width: 600px;
  background-color: #A5BBC9;
  padding: 20px;
}

#date-range {
  margin-top: 0;
}

.arrow-up {
  width: 0;
  height: 0;
  border-left: 12px solid transparent;
  border-right: 12px solid transparent;

  border-bottom: 24px solid #3ff;
}

.in {
  animation: fadein 0.5s;
}

@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.out {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 1s, opacity 1s linear;
}

.circle {
  position: relative;
  left: -10px;
  top: -10px;
  width:20px;
  height:20px;
  border: solid 1px #555;
  background-color: #eed;
  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.6);
  border-radius:10px;
}

.circle-in {
  animation: bump 0.75s;
  background-color: #f3f;
}

.circle-out {
  animation: fadecolor 0.5s;
  background-color: #eed;
}

@keyframes bump {
  0% { background-color: #eed; }
  50% { background-color: #f33; left: -15px; top: -15px; width: 30px; height: 30px; border-radius: 15px; }
  100% { background-color: #f3f; left: -10px; top: -10px; width: 20px; height: 20px; border-radius: 10px; }
}

@keyframes fadecolor {
  from { background-color: #f3f; }
  to { background-color: #eed; }
}

